force-app/main/default/objects/Recruiter__c/Recruiter__c.object-meta.xml
<CustomObject>
    <label>Recruiter</label>
    <nameField>
        <label>Recruiter</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recruiters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>