force-app/main/default/objects/Recruiter__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>The department or division to which the recruiter belongs (e.g., HR, Sales, Tech).</description>
    <label>Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>