force-app/main/default/objects/Recruiter__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>The recruiter&apos;s primary work email address. Used for notifications, communication, and system integration.</description>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>