force-app/main/default/objects/Recruiter__c/fields/Incentive_Earned__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Earned__c</fullName>
    <description>Total monetary incentive earned by the recruiter based on performance or milestones.</description>
    <label>Incentive Earned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>