force-app/main/default/objects/Recruiter__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <description>Designation or role of the recruiter within the organization (e.g., Talent Acquisition Manager).</description>
    <label>Job Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technical Recruiter</fullName>
            </value>
            <value>
                <fullName>Sr. Recruiter</fullName>
            </value>
            <value>
                <fullName>Team Lead</fullName>
            </value>
            <value>
                <fullName>Vendor Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>