force-app/main/default/objects/Recruiter__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Establish a relationship within the recruiter object to preserve information about their manager.</description>
    <label>Manager</label>
    <referenceTo>Recruiter__c</referenceTo>
    <relationshipLabel>Recruiters</relationshipLabel>
    <relationshipName>Recruiters</relationshipName>
    <type>Lookup</type>
</CustomField>