force-app/main/default/objects/Recruiter__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Primary contact number of the recruiter. Used for direct communication and internal reference.</description>
    <label>Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>