force-app/main/default/objects/Recruiter__c/fields/Quarterly_Target__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Target__c</fullName>
    <description>Represents the goal set for this specific 3-month period.</description>
    <inlineHelpText>Enter the sales or performance target to be achieved for the current quarter.</inlineHelpText>
    <label>Quarterly Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>