force-app/main/default/objects/Recruiter__c/fields/Recruiter_Manager__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_Manager__c</fullName>
    <label>Recruiter Manager</label>
    <length>100</length>
    <type>Text</type>
</CustomField>