force-app/main/default/objects/Recruiter__c/fields/Total_Joining__c.field-meta.xml
<CustomField>
    <fullName>Total_Joining__c</fullName>
    <description>The total number of candidates successfully joined through the recruiter’s efforts.</description>
    <label>Total Joining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>