force-app/main/default/objects/Recruiter__c/validationRules/VR1_Number_Field_Cannot_Be_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>VR1_Number_Field_Cannot_Be_Negative</fullName>
    <active>true</active>
    <description>Number Field And Currency Field&apos;s Value  Can&apos;t be  Less Than Zero(Negative)</description>
    <errorConditionFormula>OR(Incentive_Earned__c &lt; 0, Total_Joining__c &lt;0 ,Total_Offers_Made__c &lt; 0,Total_Revenue_Generated__c &lt; 0 ,Quarterly_Target__c &lt; 0)</errorConditionFormula>
    <errorMessage>Value Can&apos;t be  Less Than Zero</errorMessage>
</ValidationRule>