force-app/main/default/objects/Recruiter__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Job_Title__c</columns>
    <columns>Department__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>