force-app/main/default/objects/Recruiter__c/listViews/Recruiter_List_View.listView-meta.xml
<ListView>
    <fullName>Recruiter_List_View</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Job_Title__c</columns>
    <columns>Department__c</columns>
    <filterScope>Everything</filterScope>
    <label>Recruiter List View</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <allPartnerUsers></allPartnerUsers>
    </sharedTo>
</ListView>